3_sg/sg.tf
resource "aws_security_group" "sg-menino-do-rappi" {
  name          = "menino-do-rappi"
  vpc_id        = "vpc-07cde928a6e7d7800"

  ingress {
    protocol    = "tcp"
    from_port   = "22"
    to_port     = "22"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    protocol    = "tcp"
    from_port   = "80"
    to_port     = "80"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags          = var.tags
}
